--- a/convolution.ipynb
+++ b/convolution.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -47,54 +47,50 @@
    ],
    "source": [
     "#def convolve(image, kernel, padding, stride):\n",
-    "padding = 2\n",
-    "stride = 1\n",
+    "padding = 2 #pad 수\n",
+    "stride = 1 #stride 수\n",
     "\n",
-    "image = cv2.imread('messi5.jpg')\n",
-    "(input_H, input_W, iput_C) = image.shape[0:3]#가로크기,세로크기,채널수를 각각의 변수에 대입\n",
+    "image = cv2.imread('messi5.jpg') #원본 이미지 불러오기\n",
+    "(input_H, input_W, iput_C) = image.shape[0:3] #(.shape:차원별 크기 구하기) 각각 길이,높이,채널수 변수에 대입\n",
     "\n",
+    "kernel = np.array([[1,0,-1],[0,0,0],[-1,0,1]]) #필터 임의 지정\n",
+    "(kernel_H, kernel_W) = kernel.shape[0:2] #필터(2차원)이므로 각각 길이,높이에 대입\n",
     "\n",
-    "kernel = np.array([[1,0,-1],[0,0,0],[-1,0,1]])#필터 임의 지정\n",
-    "(kernel_H, kernel_W) = kernel.shape[0:2]\n",
+    "output_H=int((input_H+2*padding-kernel_H)/stride+1) #아웃풋(3차원)의 길이,높이,채널수 변수 지정\n",
+    "output_W=int((input_W+2*padding-kernel_W)/stride+1) #패딩하기 전 원본이미지에서 미리 계산해야함\n",
+    "output_C=image.shape[2] #인풋 이미지의 채널수대로 split, 컨볼루션 후 아웃풋변수에 대입, merge 해야 하므로 인풋과 채널수 동일하게 설정 \n",
     "\n",
-    "output_H=int((input_H+2*padding-kernel_H)/stride+1)#*패딩하지 않은 인풋에서 추출해야함*\n",
-    "output_W=int((input_W+2*padding-kernel_W)/stride+1)#아웃풋 크기 지정을 위한 변수\n",
-    "output_C=image.shape[2]\n",
+    "output=np.zeros((output_H, output_W, output_C), dtype=\"float32\") #컨볼루션한 각 채널이 들어갈 아웃풋 채널별 변수를 만들기 위해 0행렬 배열 미리 만들기\n",
     "\n",
-    "output=np.zeros((output_H, output_W, output_C), dtype=\"float32\")#아웃풋크기지정\n",
+    "image_paded = cv2.copyMakeBorder(image, padding, padding, padding, padding,cv2.BORDER_REPLICATE) #이미지 패딩, 반사 모양 으로\n",
     "\n",
-    "image_paded = cv2.copyMakeBorder(image, padding, padding, padding, padding,cv2.BORDER_REPLICATE)\n",
-    "#이미지 패딩#\n",
+    "b,g,r = cv2.split(image_paded) #패딩한 원본 이미지를 채널별로 쪼개기\n",
+    "output_b,output_g,output_r = cv2.split(output) #위에서 만든 0행렬 배열(아웃풋 이미지)를 채널별로 쪼개기\n",
     "\n",
-    "b,g,r = cv2.split(image_paded)#패딩한 이미지의 채널 쪼개기\n",
-    "output_b,output_g,output_r = cv2.split(output)#아웃풋 이미지의 채널 쪼개기\n",
-    "\n",
-    "\n",
-    "for y in np.arange(0, output_H, stride):\n",
+    "for y in np.arange(0, output_H, stride): #y값에 0부터 output_H-1까지 stride칸씩 이동하면서 정수 대입\n",
     "    for x in np.arange(0, output_W, stride):\n",
-    "        roi = b[y:kernel_H+y , x:kernel_W+x]\n",
-    "        k = (roi*kernel).sum()\n",
+    "        roi = b[y:kernel_H+y , x:kernel_W+x] #패딩된 원본 이미지에서 필터크기와 같은 칸을 0,0좌표부터 이동하며 추출 (곱셈 연산을 위해)\n",
+    "        k = (roi*kernel).sum()#추출된 roi(x행y열)와 지정된 필터(x행y열)를 곱한 후 나오는 x행y열 행렬의 성분을 단순 덧셈\n",
     "        if (k<0): \n",
-    "            output_b[y,x] = 0\n",
-    "        else:\n",
-    "            output_b[y, x] = k\n",
+    "            output_b[y, x] = 0 #k가 -값인 경우, 0~255의 정수 배열인 BGR 형식에 비정상적으로 들어감\n",
+    "        else: #*단순 0처리뿐만 방법이 아니라, k가 -값인 경우 +255를 하던, 여러가지 방법으로 조작 가능*\n",
+    "            output_b[y, x] = k #k가 0이 아닌 경우 아웃풋(b채널)에 대입\n",
     "\n",
-    "for y in np.arange(0, output_H, stride):\n",
+    "for y in np.arange(0, output_H, stride): #동일 연산을 패딩된 인풋이미지(g채널)에 적용 후 아웃풋(g채널)에 대입\n",
     "    for x in np.arange(0, output_W, stride):\n",
     "        roi = g[y:kernel_H+y , x:kernel_W+x]\n",
     "        k = (roi*kernel).sum()\n",
     "        if (k<0):\n",
-    "            output_g[y,x] = 0\n",
+    "            output_g[y, x] = 0\n",
     "        else:\n",
     "            output_g[y, x] = k\n",
-    "        \n",
     "\n",
-    "for y in np.arange(0, output_H, stride):\n",
+    "for y in np.arange(0, output_H, stride): #동일 연산을 패딩된 인풋이미지(r채널)에 적용 후 아웃풋(r채널)에 대입\n",
     "    for x in np.arange(0, output_W, stride):\n",
     "        roi = r[y:kernel_H+y , x:kernel_W+x]\n",
     "        k = (roi*kernel).sum()\n",
     "        if (k<0):\n",
-    "            output_r[y,x] = 0\n",
+    "            output_r[y, x] = 0\n",
     "        else:\n",
     "            output_r[y, x] = k\n",
     "\n",
@@ -109,10 +105,15 @@
     "print(\"아웃풋 이미지 사이즈(채널) : \" + str(output_b.shape))\n",
     "\n",
     "output=cv2.merge((output_b.astype('uint8'),output_g.astype('uint8'),output_r.astype('uint8')))\n",
+    "#아웃풋 r,g,b 채널을 합해 3차원 구조로 merge\n",
+    "#여기서 합쳐진 output은 위에서 영행렬 배열을 만들때 플로팅 형식으로 지정해줬으므로\n",
+    "#각각의 아웃풋 채널들을 합치기 전에 unsigned(부호 없는) 8bit로 형변환\n",
     "\n",
     "plt.subplot(121),plt.imshow(cv2.cvtColor(image,cv2.COLOR_BGR2RGB)),plt.title('Original')\n",
     "plt.subplot(122),plt.imshow(cv2.cvtColor(output,cv2.COLOR_BGR2RGB)),plt.title('changed')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#return output"
    ]
   },
   {
@@ -139,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
